--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,9 @@
-version: 2 # use CircleCI 2.0 #
-
-jobs: # a collection of steps
-  build: # runs not using Workflows must have a `build` job as entry point
- 
-    docker: # run the steps with Docker
-      — image: circleci/openjdk:11.0.18 # …with this image as the primary container; this is where all `steps` will run
- 
-    steps: # a collection of executable commands
-      — checkout # Checkout the code from Github
-      — run: mvn clean install # mvn clean install tells Maven to do the clean phase in each module before running the install phase for each module.
-  test:
+version: 2
+jobs:
+  build:
     docker:
-      - image: circleci/openjdk:11.0.18
+      - image: circleci/openjdk:11
     steps:
       - checkout
-      - run: echo "this is the test job"
+      - run: echo "hello world"  
 
-workflows:
-  build_and_test:
-    jobs:
-      - build
-      - test
