--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,18 @@
 version: 2
 jobs:
-  build:
+  build1:
     docker:
       - image: circleci/openjdk:11
     steps:
       - checkout
-      - run: echo "hello world"  
-
+      - run: echo "Hello world"
+  build2:
+    docker:
+      - image: circleci/openjdk:11
+    steps:
+      - checkout
+      - run: echo "Hello Ahtesham"  
+workflows:
+  jobs:
+    - build1:
+    - build2:
