--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,12 +7,11 @@ jobs:
       - checkout
       - run: echo "Hello world"
   build2:
-    docker:
-      - image: circleci/openjdk:11
     steps:
       - checkout
       - run: echo "Hello Ahtesham"  
 workflows:
-  jobs:
-    - build1:
-    - build2:
+  build_and_test:
+    jobs:
+      - build1:
+      - build2:
