--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
       - checkout
       - run: echo "Testing"
 workflows:
-  jobs:
-    - build1
-    - build2
+  build_and_test:
+    jobs:
+      - build1
+      - build2
