--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ jobs:
       - checkout
       - run: echo "Hello world"
   build2:
+    docker:
+      - image: circleci/openjdk:11
     steps:
       - checkout
       - run: echo "Testing"
