--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,12 @@
 version: 2.1
-jobs:
-  build1:
-    docker:
-      - image: circleci/openjdk:11
-    steps:
-      - checkout
-      - run: echo "Hello world"
-  build2:
-    docker:
-      - image: circleci/openjdk:11
-    steps:
-      - checkout
-      - run: echo "Testing"
+
 workflows:
-  build_and_test:
+  build-workflow:
     jobs:
-      - build1
-      - build2
+      - runner
+jobs:
+  runner:
+    machine: true
+    resource_class: ahteshamahmad/linux_machine
+    steps:
+      - run: echo "Hi I'm on Runners!"
