--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,4 @@ jobs:
     machine: true
     resource_class: ahteshamahmad/linux_machine
     steps:
-      - run: echo "Hi I'm on Runners!"
+      - run: echo "Hi! I'm on Runners!"
