--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,10 @@
 version: 2.1
+workflows:
+  testing:
+    jobs:
+      - runner-test
 jobs:
-  build:
+  runner-test:
     machine: true
     resource_class: ahteshamahmad/linux_machine
     steps:
