--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,34 @@
 version: 2.1
-workflows:
-  testing:
-    jobs:
-      - runner-test
 jobs:
-  runner-test:
-    machine: true
-    resource_class: ahteshamahmad/linux_machine
+  build-and-deploy:
+    docker:
+      - image: circleci/openjdk:11
+
     steps:
-      - run: echo "Hi I'm on Runners!"
-      
+      - checkout
+
+      # Build Docker image
+      - run:
+          name: Build Docker image
+          command: |
+            docker build -t kubernetes-docker-image .
+
+      # Push Docker image to a container registry
+      - run:
+          name: Push Docker image
+          command: |
+            echo $realme@1234 | docker login -u $ahteshamdocker --password-stdin your-registry
+            docker push ahteshamdocker/kubernetes-docker-image
+
+      # Deploy to Kubernetes
+      - run:
+          name: Deploy to Kubernetes
+          command: |
+            kubectl apply -f database.yaml
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build-and-deploy
+
