--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,12 @@ jobs:
             docker build -t kubernetes-docker-image .
 
       # Push Docker image to a container registry
+      auth:
+        username: ahteshamdocker
+        password: realme@1234
       - run:
           name: Push Docker image
           command: |
-            docker login -u "$ahteshamdocker" -p "$realme@1234" --password-stdin 
             docker push ahteshamdocker/kubernetes-docker-image
 
       # Deploy to Kubernetes
