--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: Push Docker image
           command: |
-            echo "$realme@1234" | docker login --username "$ahteshamdocker" --password-stdin
+            echo "realme@1234" | docker login --username "ahteshamdocker" --password-stdin
             docker push ahteshamdocker/kubernetes-docker-image
 
       # Deploy to Kubernetes
