--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,34 @@
 version: 2.1
-executors:
-  remote_docker_executor:
-    docker:
-      - image: circleci/remote-docker:20.10.8
-
 jobs:
-  build_and_push:
-    executor: remote_docker_executor
-    steps:
-      - setup_remote_docker:
-          version: 20.10.8
+  build-and-deploy:
+    docker:
+      - image: circleci/openjdk:11
 
+    steps:
       - checkout
 
+      # Build Docker image
       - run:
-          name: Login to Docker Hub
+          name: Build Docker image
           command: |
-            echo "realme@1234" | docker login -u "ahteshamdocker" --password-stdin
+            docker build -t kubernetes-image .
 
+      # Push Docker image to a container registry
       - run:
-          name: Build and Push Docker Image
+          name: Push Docker image
           command: |
-            docker build -t "$ahteshamdocker/my-image:latest" .
-            docker push "$ahteshamdocker/my-image:latest"
+            echo realme@1234 | docker login -u ahteshamdocker --password-stdin docker.io
+            docker push docker.io/ahteshamdocker/kubernetes-image
+
+      # Deploy to Kubernetes
+      - run:
+          name: Deploy to Kubernetes
+          command: |
+            kubectl apply -f database.yaml
 
 workflows:
   version: 2
-  build_and_push:
+  build-and-deploy:
     jobs:
-      - build_and_push
+      - build-and-deploy
 
