--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,36 +1,54 @@
 version: 2.1
-jobs:
-  build-and-deploy:
+executors:
+  docker-publisher:
+    environment:
+      IMAGE_NAME: ahteshamdocker/kubernetes-image
+      DOCKERHUB_PASSWORD: realme@1234
+      DOCKERHUB_USERNAME: ahteshamdocker
     docker:
-      - image: circleci/openjdk:11
-
+      - image: circleci/buildpack-deps:stretch
+jobs:
+  build:
+    executor: docker-publisher
     steps:
-      - setup_remote_docker:
-          version: 20.10.8
       - checkout
-
-      # Build Docker image
+      - setup_remote_docker
       - run:
           name: Build Docker image
           command: |
-            docker build -t kubernetes-image .
-
-      # Push Docker image to a container registry
+            docker build -t $IMAGE_NAME:latest .
       - run:
-          name: Push Docker image
-          command: |
-            echo realme@1234 | docker login -u ahteshamdocker --password-stdin docker.io
-            docker push docker.io/ahteshamdocker/kubernetes-image
-
-      # Deploy to Kubernetes
+          name: Archive Docker image
+          command: docker save -o image.tar $IMAGE_NAME
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./image.tar
+  publish-latest:
+    executor: docker-publisher
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - setup_remote_docker
       - run:
-          name: Deploy to Kubernetes
+          name: Load archived Docker image
+          command: docker load -i /tmp/workspace/image.tar
+      - run:
+          name: Publish Docker Image to Docker Hub
           command: |
-            kubectl apply -f database.yaml
-
+            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker push $IMAGE_NAME:latest
 workflows:
   version: 2
-  build-and-deploy:
+  build-master:
     jobs:
-      - build-and-deploy
-
+      - build:
+          filters:
+            branches:
+              only: master
+      - publish-latest:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
