--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,10 @@ jobs:
           command: |
             echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
             docker push $IMAGE_NAME:latest
+      - run:
+          name: Deploy to Kubernetes
+          command: |
+            KUBECONFIG=database.yaml kubectl apply -f database.yaml
 workflows:
   version: 2
   build-master:
