--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,14 @@ jobs:
             echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
             docker push $IMAGE_NAME:latest
       - run:
+          name: Install kubectl
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y kubectl
+      - run:
           name: Deploy to Kubernetes
           command: |
-            KUBECONFIG=database.yaml kubectl apply -f database.yaml
+            kubectl apply -f database.yaml
 workflows:
   version: 2
   build-master:
