--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,10 @@ jobs:
       - run:
           name: Install kubectl
           command: |
-            sudo apt-get update
-            sudo apt-get install -y kubectl
+            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+            chmod +x kubectl
+            sudo mv kubectl /usr/local/bin/
+
       - run:
           name: Deploy to Kubernetes
           command: |
