--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
       - run:
           name: Deploy to Kubernetes
           command: |
-            kubectl apply -f database.yaml
+            kubectl run nginx --image=nginx --restart=Never
 workflows:
   version: 2
   build-master:
