--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
       - run:
           name: Deploy to Kubernetes
           command: |
-            kubectl version --short
+            kubectl apply -f ./database.yaml
 workflows:
   version: 2
   build-master:
