Updated the config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,13 @@ jobs:
       - run:
           name: Start Minikube
           command: minikube start
+            nohup minikube start &
+      - run:
+          name: Wait for Minikube
+          command: |
+            while ! minikube status &> /dev/null; do
+              sleep 2
+            done
       - run:
           name: Install kubectl
           command: |
