--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,24 +41,9 @@ jobs:
             echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
             docker push $IMAGE_NAME:latest
       - run:
-          name: Install Minikube
+          name: Run dokcer on specific IP_address
           command: |
-            curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-            sudo install minikube-linux-amd64 /usr/local/bin/minikube
-      - run:
-          name: Start Minikube
-          command: minikube start
-            nohup minikube start &
-      - run:
-          name: Install kubectl
-          command: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            chmod +x kubectl
-            sudo mv kubectl /usr/local/bin/
-      - run:
-          name: Deploy to Kubernetes
-          command: |
-            kubectl apply -f ./database.yaml
+            docker run -d -p 3.18.105.31:8000:8000 $IMAGE_NAME
 workflows:
   version: 2
   build-master:
